css/result.css
/* Globals */
body {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  overflow-x: hidden;
}

.container-fluid {
  background-color: white;
  width: 98%;
}

ul,
li {
  padding: 0;
  margin: 0;
}

.nav-brand img {
  width: 100px;
  height: 40px;
}

.bg-orange {
  background-color: #d35649;
}

.bg-light-orange {
  background-color: #e17f65;
}

/* jumbotron button */
.bg-gray {
  background-color: #edf1f4;
}

.bg-deep-gray {
  background-color: #98a4a5;
}

/* footer color */
.bg-mid-gray {
  background-color: #bfbdbc;
}

.bg-mid-dark {
  background-color: #1f1f1f;
}

.bg-light-blue {
  background-color: #519cd8;
}

.text-orange {
  color: #e07364;
}

.text-dark {
  color: #8d8f91;
}

.text-gray {
  color: #d1d7d9;
}

.slim-text {
  font-size: 0.8rem;
}

.slim-text-1 {
  font-size: 0.95rem;
}

.btn-align {
  margin: 2rem 0;
}

label {
  font-size: 0.8rem;
  color: #333;
  text-align: left;
  text-transform: uppercase;
}

.bootcamp-header img {
  width: 29px;
  height: 28px;
}

.jumbotron {
  text-align: center;
}

.container {
  position: relative;
}

.container span {
  position: absolute;
  top: 6.5rem;
  left: 10.1rem;
}

.jumbotron h1 {
  font-size: 1.5rem;
  color: #8d8f91;
}

.search-form {
  width: 60rem;
  height: 10rem;
  margin: 0 auto;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(225, 225, 225, 0.6);
  border-radius: 0.5rem;
  margin-bottom: 5rem;
  box-shadow: 1rem 2rem 5rem #aaa;
}

.search-form input {
  font-size: 1.6rem;
  border: none;
  height: 3rem;
}

.search-form input[type="text"] {
  width: 60%;
}

.search-form input[type="submit"] {
  width: 25%;
  text-transform: uppercase;
  background-color: #ed2c49;
  color: #fff;
}

/* SERVICES */
#services {
  padding: 100px 0 50px 0;
  background-color: #fff;
  margin-top: 2rem;
}

.testimony-profile {
  display: flex;
  justify-content: space-between;
}

.testimony img {
  width: 250px;
  height: 250px;
}

#services .col-md-6 img {
  margin-bottom: 30px;
  height: 85px;
}

#services .col-md-6 img:hover {
  transform: scale(1.2);
  transition: all 0.4s ease-in-out;
}

#services h4 {
  font-family: var(--roboto);
  font-weight: 700;
  margin-bottom: 10px;
  text-transform: capitalize;
  color: #333 !important;
}

.top-footer {
  background-color: black;
}

.footer-bottom {
  background-color: gray;
}

.footer-nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.5rem 2rem;
  margin: 0 2.8rem;
}

.top-nav-icon {
  position: relative;
  background-color: #080707;
  color: #fff;
  font-size: 2rem;
  border-radius: 50%;
  border: 2px solid gray;
  z-index: 1;
}

.footer-nav a,
.nav-link {
  text-decoration: none;
  text-transform: uppercase;
  cursor: pointer;
  color: #fff;
}

.footer-info h2 {
  text-transform: uppercase;
  font-size: 1rem;
  color: #fff;
}

.footer-nav li {
  list-style-type: none;
  padding: 0;
}

.footer-form {
  height: 2rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

.footer-form input {
  font-size: 1rem;
  border: none;
  height: 2rem;
  padding: 0.3rem;
}

.footer-form input[type="text"] {
  width: 60%;
  color: #bfbdbc;
  border: 1px solid #98a4a5;
}

.footer-form input[type="submit"] {
  width: 25%;
  background-color: #98a4a5;
  color: #fff;
}

.footer-nav-wrapper::after,
.footer-info::after {
  content: "";
  position: absolute;
  right: -60px;
  top: -55px;
  width: 92vw;
  height: 2px;
  border: 1px solid #98a4a5;
  background: #eee;
  text-align: center;
}

.footer-nav-wrapper::before,
.footer-info::before {
  content: "";
  position: absolute;
  right: -60px;
  top: -15px;
  width: 92vw;
  height: 2px;
  border: 1px solid #98a4a5;
  background: #eee;
}

/* MEDIA QUERY */
@media (min-width: 425px) {
  .container-fluid {
    background-color: white;
    width: 100%;
    margin: 0 auto;
  }

  .d-xs-none {
    display: none;
  }

  .mobile {
    display: flex;
    flex-direction: column;
  }

  .mobile-nav {
    order: 1;
  }

  .mobile-nav li {
    list-style-type: none;
  }

  .footer-nav {
    width: 100%;
    margin: 0 auto;
  }

  .footer-info h2 {
    margin: 0.7rem 0;
  }

  .footer-nav li {
    list-style-type: none;
    font-size: 0.5rem;
    width: 100%;
    margin-left: 0.3rem;
  }

  .footer-nav-wrapper::after,
  .footer-info::after {
    content: "";
    position: absolute;
    right: -60px;
    left: 15px;
    bottom: 15px;
    width: 85vw;
    height: 2px;
    border: 1px solid #98a4a5;
    background: #eee;
    text-align: center;
  }

  .footer-nav-wrapper::before,
  .footer-info::before {
    content: "";
    position: absolute;
    right: -60px;
    left: 15px;
    top: -15px;
    width: 85vw;
    height: 2px;
    border: 1px solid #98a4a5;
    background: #eee;
  }
}

/* Small devices (landscape phones, 576px and up) */
@media (min-width: 576px) {
  body {
    background-color: #fff;
  }

  .mobile {
    display: flex !important;
    justify-content: space-between;
  }

  .mobile-nav {
    order: 0;
  }

  .mobile-nav li {
    list-style-type: none;
  }

  .footer-nav {
    width: 100%;
    margin: 0 auto;
  }

  .footer-info h2 {
    margin: 0.7rem 0;
  }

  .footer-nav li {
    list-style-type: none;
    font-size: 0.6rem;
    width: 100%;
    margin-left: 0.3rem;
  }
}

/* Medium devices (tablets, 768px and up) */
@media (min-width: 768px) {
  .margin-right-1 {
    margin-right: 1.3rem;
  }

  .mobile {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }

  .mobile-nav li {
    list-style-type: none;
  }

  .footer-nav {
    width: 100%;
    margin: 0 auto;
  }

  .footer-info h2 {
    margin: 0.8rem 0;
  }

  .footer-nav li {
    list-style-type: none;
    font-size: 0.8rem;
    width: 100%;
    margin-left: 0.3rem;
  }

  .footer-nav-wrapper::before,
  .footer-nav-wrapper::after {
    content: "";
    position: absolute;
    left: -90px;
    top: -15px;
    width: 100vw;
    height: 2px;
    border: 1px solid #98a4a5;
    background: #eee;
  }
}

/* Large devices (desktops, 992px and up) */
@media (min-width: 992px) {
  .margin-right-1 {
    margin-right: 0;
  }

  body {
    background: #f4f5f6;
  }

  .container-fluid {
    background-color: white;
    width: 98%;
  }

  .footer-nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.5rem 2rem;
    margin: 0 2.8rem;
  }

  .footer-info h2 {
    margin: 0.7rem 0;
  }

  .footer-nav li {
    list-style-type: none;
    font-size: 1rem;
    width: 100%;
  }

  .footer-nav-wrapper::before,
  .footer-nav-wrapper::after {
    content: "";
    position: absolute;
    right: 0;
    top: -15px;
    width: 100vw;
    height: 2px;
    border: 1px solid #98a4a5;
    background: #eee;
  }
}

/* Extra large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
  .footer-nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.5rem 2rem;
    margin: 0 2.8rem;
  }

  .footer-info h2 {
    margin: 0.7rem 0;
  }

  .footer-nav li {
    list-style-type: none;
    font-size: 1rem;
    width: 100%;
  }
}

